# Hybrid-Nutrition-Data-Pipeline-Batch-Streaming

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
consumer/: Dockerfile  consume_items.py
dagster_project/: Dockerfile  dagster.yaml  pipeline.py
producer/: Dockerfile  produce_items.py
superset/: Dockerfile  superset_config.py
