[tool.poetry]
name = "nutrition_project"
version = "0.1.0"
description = "Data pipeline using Kafka, Cassandra, ClickHouse, Dagster, Superset, and OpenAI"
authors = ["JMDU"]

[tool.poetry.dependencies]
python = "~3.8"
flask = ">=2.2,<2.3"
requests = "^2.28"
openai = "^0.27.0"
cassandra-driver = "^3.28.0"
clickhouse-driver = "^0.2.7"
clickhouse-sqlalchemy = "^0.2.5"
kafka-python = "^2.0.2"
dagster = "^1.2.0"
dagit = "^1.2.0"
apache-superset = "^2.1.0"
marshmallow-enum = "^1.5.1"
psycopg2-binary = "^2.9.5"
gevent = "^21.12.0"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.core.masonry.api"
